// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rapid-icon-bar.vue hides character icons and shows edit actions when edit mode enabled 1`] = `
<div class="has-icons rapid-icon-bar">
  <div><button role="button" class="cv-button bx--btn bx--btn--secondary bx--btn--sm" id="edit-button">
      Edit
      <!---->
      <!----></button> <button role="button" class="cv-button bx--btn bx--btn--danger bx--btn--sm" id="delete-button">
      Delete
      <!---->
      <!----></button></div>
</div>
`;

exports[`rapid-icon-bar.vue shows access point icon when poi is access point 1`] = `
<div class="has-icons rapid-icon-bar">
  <ul id="character-icons-wrapper">
    <!---->
    <li id="access-icon"><button type="button" class="cv-tooltip bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"><span class="bx--assistive-text">Access Point</span>
        <repeat32-stub></repeat32-stub></button></li>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </ul>
</div>
`;

exports[`rapid-icon-bar.vue shows hazard icon when poi is hazard 1`] = `
<div class="has-icons rapid-icon-bar">
  <ul id="character-icons-wrapper">
    <!---->
    <!---->
    <li id="hazard-icon"><button type="button" class="cv-tooltip bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"><span class="bx--assistive-text">Hazard</span>
        <warningsquare32-stub></warningsquare32-stub></button></li>
    <!---->
    <!---->
    <!---->
    <!---->
  </ul>
</div>
`;

exports[`rapid-icon-bar.vue shows portage icon when poi is portage 1`] = `
<div class="has-icons rapid-icon-bar">
  <ul id="character-icons-wrapper">
    <!---->
    <!---->
    <!---->
    <!---->
    <li id="portage-icon"><button type="button" class="cv-tooltip bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"><span class="bx--assistive-text">Portage</span>
        <pedestrian32-stub></pedestrian32-stub></button></li>
    <!---->
    <!---->
  </ul>
</div>
`;

exports[`rapid-icon-bar.vue shows put in icon when poi is put in 1`] = `
<div class="has-icons rapid-icon-bar">
  <ul id="character-icons-wrapper">
    <li id="put-in-icon"><button type="button" class="cv-tooltip bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"><span class="bx--assistive-text">Put In</span>
        <login32-stub></login32-stub></button></li>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </ul>
</div>
`;

exports[`rapid-icon-bar.vue shows surf icon when poi is playspot 1`] = `
<div class="has-icons rapid-icon-bar">
  <ul id="character-icons-wrapper">
    <!---->
    <!---->
    <!---->
    <li id="surf-icon"><span><button type="button" class="cv-tooltip bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"><span class="bx--assistive-text">Surf Spot</span><i class="app-icon"><svg id="surf-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
          <!---->
          <g stroke-linecap="square" stroke-linejoin="miter" stroke-width="2" fill="#565656" stroke="#565656">
            <path d="M1,27a9.731,9.731,0,0,0,7.5-3.5,9.786,9.786,0,0,0,15,0A9.676,9.676,0,0,0,31,27" fill="none" stroke="#565656" stroke-miterlimit="10"></path>
            <path d="M1,19H2.364c8.181,0,6.42-8.74,11.612-13.075,5.7-4.758,10.855.677,11.664,1.693C19.976,8.634,21.455,19,29.636,19H31" fill="none" stroke-miterlimit="10"></path>
          </g>
        </svg></i></button></span></li>
    <!---->
    <!---->
    <!---->
  </ul>
</div>
`;

exports[`rapid-icon-bar.vue shows take out icon when poi is take out 1`] = `
<div class="has-icons rapid-icon-bar">
  <ul id="character-icons-wrapper">
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <li id="take-out-icon"><button type="button" class="cv-tooltip bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"><span class="bx--assistive-text">Take Out</span>
        <logout32-stub></logout32-stub></button></li>
  </ul>
</div>
`;

exports[`rapid-icon-bar.vue shows waterfall icon when poi is waterfall 1`] = `
<div class="has-icons rapid-icon-bar">
  <ul id="character-icons-wrapper">
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <li id="waterfall-icon"><button type="button" class="cv-tooltip bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center"><span class="bx--assistive-text">Waterfall / Large Drop</span>
        <warningsquare32-stub></warningsquare32-stub></button></li>
    <!---->
  </ul>
</div>
`;
